# multi-search-skill

./: .gitignore  .mcp.json  LICENSE  README.md  SKILL.md  _check_a.py  multi-search-config.json  package-lock.json  package.json  probe_deep.py  probe_limits.py  pyproject.toml  search.py  test_core.py  test_deep.py  test_limits.py  test_mcp_architecture.py  test_mcp_core.py  test_plugin_architecture.py  test_plugin_core.py
.codex-plugin/: plugin.json
docs/: glossary.md  legacy-skill.md  route-capability-table.md  route-redesign-plan.md
multi-search-plugin/: .mcp.json  README.md  multi-search-config.json  pyproject.toml
multi-search-plugin/.codex-plugin/: plugin.json
multi-search-plugin/mcp/: pathing.py  server.py  tools.py
multi-search-plugin/mcp/src/: service.py
multi-search-plugin/mcp/src/scrape/: scrape.py  scrape_planner.py
multi-search-plugin/mcp/src/scrape/scrapers/: __init__.py  exa.py  jina.py  reddit.py  registry.py  tavily.py
multi-search-plugin/mcp/src/search/: capabilities.py  registry.py  search_runner.py
multi-search-plugin/mcp/src/search/searchers/: baidu.py  bilibili.py  brave.py  deepseek_web.py  exa.py  firecrawl.py  github.py  glm_web.py  hackernews.py  linuxdo_api.mjs  reddit.py  serpapi.py  stackoverflow.py  tavily.py  youtube.py
multi-search-plugin/mcp/src/state/: key_state.py  keys.py  mark_exhausted.py  state_store.py
multi-search-plugin/mcp/src/support/: auth.py  check-env.ps1  config.py  dedup.py  doctor.py  format.py  http.py  init.ps1  models.py  secrets.py
multi-search-plugin/skills/multi-search/: SKILL.md
(+95 files in other folders)
